Index.html aktualisieren

--- a/Index.html
+++ b/Index.html
@@ -24,9 +24,9 @@ let theme1={"secondHandSrc" : "themes/Theme1/Seconds.png" ,
  "handPivotSX": 0.5,
  "handPivotSY": 0.72
  };
-let theme2={"secondHandSrc" : "themes/Theme2/seconds.png" ,
- "minuteHandSrc":"themes/Theme2/minutes.png",
- "hourHandSrc":"themes/Theme2/hours.png",
+let theme2={"secondHandSrc" : "themes/Theme2/Seconds.png" ,
+ "minuteHandSrc":"themes/Theme2/Minutes.png",
+ "hourHandSrc":"themes/Theme2/Hours.png",
  "backgroundSrc":"themes/Theme2/BG.png",
  "handPivotHX": 0.5,
  "handPivotHY": 0.9,
