--- a/Index.html
+++ b/Index.html
@@ -45,16 +45,18 @@ let theme3={"secondHandColor" : "Red" ,
 
 
 let myClockThemeDefault = new MagicClock( 20, 20 , 250 );
+
+
+// clocks with captions
 let myClockTheme3 = new MagicClock( 300, 300 , 250, theme3 );
+myClockTheme3.addCaption( new Date().getDate() , 50 , 2, 'bold 20px Arial' , 'black' );
+
 let myClockTheme2 = new MagicClock( 300, 20 , 250, theme2 );
+myClockTheme2.addCaption( new Date().getDate() , 50 , 2, 'bold 20px Arial' , 'black' );
 
-
-// clock with captions
 let myClockTheme1 = new MagicClock( 20, 300 , 250, theme1 );
-
-myClockTheme1.addCaption( new Date().getDate() , 80 , 2, 'bold 20px Arial' , 'black' );
-
-myClockTheme1.addCaption( "Rolex" , -40 , 115, 'bold 20px Courier' , 'black' );
+myClockTheme1.addCaption( new Date().getDate() , 50 , 2, 'bold 20px Arial' , 'black' );
+myClockTheme1.addCaption( "Rolex" , -30 , 80 , 'bold 20px Courier' , 'black' );
 
 
 
